fixed out of bounds issue

--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,8 @@ section {
   width: 100%;
   height: 100%;
   margin: 50px auto;
+     
+    object-fit: contain;
 }
   .aboutMe{
     margin-top: 0px;
@@ -36,6 +38,8 @@ section {
     justify-content: center;
     width: 100vh;
     height: 100vh;
+
+    object-fit: contain;
   }
 
   .aboutMe article{
@@ -46,13 +50,13 @@ section {
     flex-direction: column;
     box-shadow: 0 0 5px gray;
     background-color: #fff;
-    padding:50px;
+    padding:50px 50px 50px 50px;
     width: 50vh;
     height: 50vh;
-    min-height: 512px;
-    min-width: 512px;
+    min-height: 563px;
+    min-width: 563px;
   
-   
+   overflow: auto;
     object-fit: contain;
     box-sizing: border-box;
 
@@ -84,8 +88,8 @@ section {
   margin:0;
   width: 50vh;
   height: 50vh;
-  min-height: 512px;
-  min-width: 512px;
+  min-height: 563px;
+  min-width: 563px;
  
   object-fit: contain;
   
